--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@ button {
   background-color: rgba(255, 255, 255, 0.2);
   padding: 10px 20px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .createForm {
@@ -72,7 +73,6 @@ button {
   font-size: 20px;
   display: flex;
   flex-direction: column;
-  /* align-items: flex-start; */
   color: #fff;
   cursor: pointer;
 }
